@@ -6,6 +6,7 @@ All issue numbers are relative to https://github.com/Toblerity/Fiona/issues.
 1.9.3 (TBD)
 -----------
 
+- Enable append mode for fio-load (#1237).
 - Reading a GeoJSON with an empty array property can result in a segmentation
   fault since version 1.9.0. This has been fixed (#1228).
 
